--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "ibmid-login",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "Integrates with the IBM Identity and Account Management (IAM) and Accounts APIs to implement login using IBMid.",
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^0.21.1",
-    "memoizee": "^0.4.15"
+    "axios": "^0.21.1"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
