--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "ibmid-login",
-  "version": "1.6.0",
+  "version": "1.7.0",
   "description": "Integrates with the IBM Identity and Account Management (IAM) and Accounts APIs to implement login using IBMid.",
   "main": "lib/index.js",
   "dependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.1",
+    "jsonwebtoken": "^8.5.1",
+    "jwks-rsa": "^2.0.3"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
