--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ibmid-login",
-  "version": "1.7.2",
+  "version": "1.8.0",
   "description": "Integrates with the IBM Identity and Account Management (IAM) and Accounts APIs to implement login using IBMid.",
   "main": "lib/index.js",
   "dependencies": {
@@ -11,11 +11,23 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "eslint": "^7.29.0",
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1"
+  },
+  "peerDependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1"
   },
   "scripts": {
     "test": "jest --collectCoverage",
     "lint": "eslint"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "lib/**/*.js",
+      "!lib/adapters/**/*.js"
+    ]
   },
   "keywords": [
     "IBM",
