--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "name": "ibmid-login",
-  "version": "1.9.0",
+  "version": "1.10.0",
   "description": "Integrates with the IBM Identity and Account Management (IAM) and Accounts APIs to implement login using IBMid.",
   "main": "lib/index.js",
   "dependencies": {
     "axios": "^0.21.1",
     "jsonwebtoken": "^8.5.1",
-    "jwks-rsa": "^2.0.3"
+    "jwks-rsa": "^2.0.3",
+    "memoizee": "^0.4.15"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
-    "eslint": "^7.29.0",
-    "jest": "^26.6.3",
     "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "eslint": "^7.29.0",
+    "express": "^4.17.1",
+    "jest": "^26.6.3"
   },
   "peerDependencies": {
     "cookie-parser": "^1.4.5",
